# dataset_tools

./: .gitignore  .gitlab-ci.yml  README.md
custom_point_types/: CMakeLists.txt
custom_point_types/include/custom_point_types/: point_xyzir.h  point_xyzirl.h  point_xyzirrgb.h  point_xyziruvcov.h
dataset_gui/: CMakeLists.txt  DatasetGUI.pro  package.xml
dataset_gui/include/dataset_gui/: dataset_thread.h  datasetgui.h  terminal_colours.h
dataset_gui/launch/: run.launch
dataset_gui/scripts/: run.sh
dataset_gui/src/: dataset_thread.cpp  datasetgui.cpp  datasetgui.ui  main.cpp
dataset_msgs/: CMakeLists.txt
dataset_msgs/msg/: DatasetEvent.msg  LocaliserStats.msg
dataset_playback/: CMakeLists.txt  package.xml
dataset_playback/include/dataset_playback/: QBusStopScene.h  bus_stop_panel.h  dataset_panel.h  datasetgui.h  datasetgui.ui
dataset_playback/launch/: run.launch
dataset_playback/qt/: datasetgui.cpp  test.h
dataset_playback/scripts/: run.sh
dataset_playback/src/: QBusStopScene.cpp  bus_stop_panel.cpp  dataset_panel.cpp  main.cpp
dataset_tools/: CMakeLists.txt  package.xml
dataset_tools/include/dataset_tools/: bag_output.hpp  icp_matcher_pipeline.hpp  point_cloud_features_pipeline.hpp  run_pipeline.hpp
dataset_tools/msg/: LocaliserStats.msg
dataset_tools/src/: bag_output.cpp  behavior_tree_pipeline.cpp  icp_matcher_pipeline.cpp  point_cloud_features_pipeline.cpp  run_pipeline.cpp
h264_bag_playback/: CMakeLists.txt  README.md  nodelet_definition.xml  package.xml
h264_bag_playback/config/: static_tf_corrections.yaml  time_offsets.yaml
h264_bag_playback/include/h264_bag_playback/: bag_static_transform_publisher.hpp  bag_writer.hpp  corrected_imu_playback.hpp  h264_bag_playback.hpp  helper_functions.hpp  replace_msg.h  video.hpp
h264_bag_playback/launch/: h264_playback.launch
h264_bag_playback/scripts/: .convert_video.sh.swp  convert_folder.sh  convert_video.sh
h264_bag_playback/src/: bag_static_transform_publisher.cpp  bag_writer.cpp  h264_bag_playback.cpp  replace_msg.cpp  video.cpp
h264_bag_playback/test/: test_playback.cpp
include/h264_bag_tools/: main.hpp  video.hpp
launch/: nodelet_test.launch
pointfeatures-to-bag/: CMakeLists.txt  package.xml
pointfeatures-to-bag/include/pointfeatures-to-bag/: pointfeatures-to-bag.hpp
pointfeatures-to-bag/src/: pointfeatures-to-bag.cpp
src/: main.cpp  video.cpp
