<package format="2">
  <name>dataset_playback</name>
  <version>0.0.1</version>
  <description>
     Qt application for selecting a vehicle control trajectory
  </description>
  <maintainer email="s.worrall@acfr.usyd.edu.au">Stewart Worrall</maintainer>
  <license>BSD</license>

  <author>Stewart Worrall</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nav_msgs</depend>
  <depend>py_trees_msgs</depend>
  <depend>sensor_msgs</depend>

  <build_depend>qtbase5-dev</build_depend>
  <depend>graphviz</depend>
  <depend>h264_bag_playback</depend>
  <depend>dataset_tools</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-svg-dev</depend>
  <depend>libqt5-widgets</depend>
  <depend>roscpp</depend>
  <depend>libgraphviz</depend>

  <depend>zio_navigation_msgs</depend>

</package>
