<package format="2">
  <name>localiser</name>
  <version>0.0.1</version>
  <description>A c++ version of the position filter with options for a filtering approach, or a graph optimisation approach to localisation in ROS</description>
  <maintainer email="stewart.worrall@sydney.edu.au">Stewart Worrall</maintainer>

  <license>BSD</license>

  <url>http://sydney.edu.au/acfr/its</url>

  <author>Stewart Worrall</author>
  <author>Siqi Yi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rosbag</depend>
  <depend>roslib</depend>
  <depend>tf</depend>
  <depend>mrpt_bridge</depend>
  <depend>gps_common</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>custom_point_types</depend>
  <depend>dataset_tools</depend>
  <depend>h264_bag_playback</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>libsuitesparse-dev</depend>  <!-- required for graph optimisation -->
  <depend>localiser_core</depend>

</package>
